==> mindThomas/STM32-libraries/Periphirals/STM32F4/UART/UART.cpp <==
#include "UART.hpp"
#include <Priorities.h>
#include <string.h> // for memset
#include <stm32f4xx_hal_uart.h>
#include <stm32f4xx_hal_dma.h>
#include <Debug/Debug.h>
#define ERROR(msg) ((void)0U); // not implemented
#include <malloc.h>

void UART::ConfigurePeripheral()
{
    switch (_port) {
        case PORT_UART2:
            if (objUART2) {
                ERROR("UART2 already in used");
                return;
            }
            _handle.Instance = USART2;
            objUART2         = this;
            break;
        default:
            ERROR("Undefined UART port");
            return;
    }

#ifdef USE_FREERTOS
    _resourceSemaphore = xSemaphoreCreateBinary();
    if (_resourceSemaphore == NULL) {
        ERROR("Could not create UART resource semaphore");
        return;
    }
    vQueueAddToRegistry(_resourceSemaphore, "UART Resource");
    xSemaphoreGive(_resourceSemaphore); // give the semaphore the first time

    // Create binary semaphore for indicating when a single byte has finished transmitting (for flagging to the transmit
    // thread)
    _transmitFinished = xSemaphoreCreateBinary();
    if (_transmitFinished == NULL) {
        ERROR("Could not create UART transmit finished semaphore");
        return;
    }
    vQueueAddToRegistry(_transmitFinished, "UART Finished");
    xSemaphoreGive(_transmitFinished); // give the semaphore the first time

    _RXdataAvailable = xSemaphoreCreateBinary();
    if (_RXdataAvailable == NULL) {
        ERROR("Could not create UART RX available semaphore");
        return;
    }
    vQueueAddToRegistry(_RXdataAvailable, "UART RX Available");
#else
    _transmitFinished = true;
#endif

    _handle.Init.BaudRate               = BaudRate;
    _handle.Init.WordLength             = UART_WORDLENGTH_8B;
    _handle.Init.StopBits               = UART_STOPBITS_1;
    _handle.Init.Parity                 = UART_PARITY_NONE;
    _handle.Init.Mode                   = UART_MODE_TX_RX;
    _handle.Init.HwFlowCtl              = UART_HWCONTROL_NONE;
    _handle.Init.OverSampling           = UART_OVERSAMPLING_16;

    __HAL_UART_DISABLE_IT(&_handle,  UART_IT_CTS | UART_IT_LBD | UART_IT_TXE | UART_IT_TC | UART_IT_RXNE | UART_IT_IDLE | UART_IT_PE | UART_IT_ERR);
    HAL_NVIC_DisableIRQ(USART2_IRQn);

    if (HAL_UART_Init(&_handle) != HAL_OK) {
        ERROR("Could not initialize UART port");
        return;
    }

    if (!DMA_Enabled) {
        /* Enable the UART Error Interrupt: (Frame error, noise error, overrun error) */
        __HAL_UART_ENABLE_IT(&_handle, UART_IT_ERR);

        /* Disable the UART Transmit Complete Interrupt */
        __HAL_UART_DISABLE_IT(&_handle, UART_IT_TC);

        /* Enable the UART Parity Error interupt and Data Register (RX) Not Empty interrupt (since FIFO mode is
         * disabled) */
        __HAL_UART_ENABLE_IT(&_handle, UART_IT_PE);
        __HAL_UART_ENABLE_IT(&_handle, UART_IT_RXNE);
    } else {
        ConfigurePeripheral_DMA();
    }

    // Enable IDLE line detection
    __HAL_UART_ENABLE_IT(&_handle, UART_IT_IDLE);
    _rxAvailableOnIdle = true;

    HAL_NVIC_EnableIRQ(USART2_IRQn);
}

void UART::InitPeripheral()
{
    GPIO_InitTypeDef GPIO_InitStruct = {0};

    if (_port == PORT_UART2) {
        /* Peripheral clock enable */
        __HAL_RCC_USART2_CLK_ENABLE();
        __HAL_RCC_GPIOA_CLK_ENABLE();

        /**USART2 GPIO Configuration
        PA2     ------> USART2_TX
        PA3     ------> USART2_RX
        */
        GPIO_InitStruct.Pin       = GPIO_PIN_2 | GPIO_PIN_3;
        GPIO_InitStruct.Mode      = GPIO_MODE_AF_PP;
        GPIO_InitStruct.Pull      = GPIO_NOPULL;
        GPIO_InitStruct.Speed     = GPIO_SPEED_FREQ_LOW;
        GPIO_InitStruct.Alternate = GPIO_AF7_USART2;
        HAL_GPIO_Init(GPIOA, &GPIO_InitStruct);

        /* UART1 interrupt Init */
        HAL_NVIC_SetPriority(USART2_IRQn, UART_INTERRUPT_PRIORITY, 0);
        HAL_NVIC_EnableIRQ(USART2_IRQn);
    }

    if (DMA_Enabled) {
        InitPeripheral_DMA();
    }
}

void UART::DeInitPeripheral()
{
    if (_port == PORT_UART2) {
        /* Peripheral clock disable */
        __HAL_RCC_USART2_CLK_DISABLE();

        // ToDo: Deinit GPIO pins
        HAL_GPIO_DeInit(GPIOA, GPIO_PIN_2 | GPIO_PIN_3);

        /* UART1 interrupt DeInit */
        HAL_NVIC_DisableIRQ(USART2_IRQn);
    }

    if (DMA_Enabled) {
        DeInitPeripheral_DMA();
    }
}

void UART::RegisterRXcallback(void(*callback) UART_CALLBACK_PARAMS, void* parameter, uint32_t chunkLength)
{
    _RXcallback          = callback;
    _RXcallbackParameter = parameter;
    _callbackChunkLength = chunkLength;

    if (_callbackChunkLength > _bufferLength) {
        _callbackChunkLength = _bufferLength;
    }

#ifdef USE_FREERTOS
    switch (_port) {
        case PORT_UART2:
            xTaskCreate(UART::CallbackThread, (char*)"UART2 callback", 512, (void*)this, UART_RECEIVER_PRIORITY,
                        &_callbackTaskHandle);
            break;
        default:
            break;
    }
#endif
}

void UART::TransmitBlocking(uint8_t* buffer, uint32_t bufLen)
{
    if (DMA_Enabled) {
        TransmitBlockingDMA(buffer, bufLen);
    } else {
        TransmitBlockingAutoInterrupt(buffer, bufLen);
    }
}

void UART::TransmitBlockingHardPolling(uint8_t* buffer, uint32_t bufLen)
{
    if (!bufLen)
        return;

    __HAL_UART_DISABLE_IT(&_handle, UART_IT_TXE);
    __HAL_UART_DISABLE_IT(&_handle, UART_IT_TC);

    do {
        /* Wait for TXE flag to be raised */
        while (__HAL_UART_GET_FLAG(&_handle, UART_FLAG_TXE) == RESET)
            ;

        /* If last char to be sent, clear TC flag */
        if (bufLen == 1)
            __HAL_UART_CLEAR_FLAG(&_handle, UART_FLAG_TC);

        /* Write character in Transmit Data register.
         * TXE flag is cleared by writing data in TDR register */
        _handle.Instance->DR = *buffer++;
    } while (--bufLen > 0);

    /* Wait for TC flag to be raised for last char */
    while (__HAL_UART_GET_FLAG(&_handle, UART_FLAG_TC) == RESET)
        ;
}

void UART::UART_IncomingDataInterrupt(UART* uart)
{
#ifdef USE_FREERTOS
    portBASE_TYPE xHigherPriorityTaskWoken = pdFALSE;
#endif

    // Only call this function is RXNE interrupt flag is set
    if (!uart) {
        ERROR("UART interrupt for unconfigured port");
        return;
    }

    uint16_t uhdata = (uint16_t)READ_REG(uart->_handle.Instance->DR);
    uart->BufferPush((uint8_t)(uhdata & 0x00FF)); // push into local buffer
    /* Clear RXNE interrupt flag */
    //__HAL_UART_SEND_REQ(huart, UART_RXDATA_FLUSH_REQUEST); // should already have been cleared by reading

    if (!uart->_rxAvailableOnIdle) {
#ifdef USE_FREERTOS
        if (uart->_RXcallback && uart->_callbackTaskHandle) {
            portBASE_TYPE xHigherPriorityTaskWoken = xTaskResumeFromISR(uart->_callbackTaskHandle);
            portYIELD_FROM_ISR(xHigherPriorityTaskWoken);
        }

        if (uart->_RXdataAvailable)
            xSemaphoreGiveFromISR(uart->_RXdataAvailable, &xHigherPriorityTaskWoken);

        portYIELD_FROM_ISR(xHigherPriorityTaskWoken);
#else
        if (uart->_RXcallback) {
            if (!uart->_bufferLength) { // buffer not enabled - use raw byte reading
                uart->_RXcallback(uart->_RXcallbackParameter, &uart->rxByte, 1);
            }
        }
#endif
    }
}

void UART::UART_Interrupt(port_t port)
{
    UART* uart = 0;
    switch (port) {
        case PORT_UART2:
            uart = objUART2;
            break;
        default:
            break;
    }

    if (!uart) {
        ERROR("UART interrupt for unconfigured port");
        return;
    }

    uint32_t isrflags = READ_REG(uart->_handle.Instance->SR);
    uint32_t cr1its   = READ_REG(uart->_handle.Instance->CR1);
    uint32_t cr3its   = READ_REG(uart->_handle.Instance->CR3);

    uint32_t errorflags;
    uint32_t dmarequest = 0x00U;

    /* If no error occurs */
    errorflags = (isrflags & (uint32_t)(USART_SR_PE | USART_SR_FE | USART_SR_ORE | USART_SR_NE));
    if (errorflags == RESET) {
        /* UART in mode Receiver ---------------------------------------------------*/
        if (((isrflags & USART_SR_RXNE) != 0U) &&
            ((cr1its & USART_CR1_RXNEIE) != 0U)) {
            UART_IncomingDataInterrupt(uart);
            return;
        }
    }

    /* If some errors occur */
    if ((errorflags != RESET) && (((cr3its & USART_CR3_EIE) != RESET) || ((cr1its & (USART_CR1_RXNEIE | USART_CR1_PEIE)) != RESET)))
    {
	    /* UART parity error interrupt occurred ----------------------------------*/
	    if (((isrflags & USART_SR_PE) != RESET) && ((cr1its & USART_CR1_PEIE) != RESET))
	    {
	    	uart->_handle.ErrorCode |= HAL_UART_ERROR_PE;
	    }

	    /* UART noise error interrupt occurred -----------------------------------*/
	    if (((isrflags & USART_SR_NE) != RESET) && ((cr3its & USART_CR3_EIE) != RESET))
	    {
	    	uart->_handle.ErrorCode |= HAL_UART_ERROR_NE;
	    }

	    /* UART frame error interrupt occurred -----------------------------------*/
	    if (((isrflags & USART_SR_FE) != RESET) && ((cr3its & USART_CR3_EIE) != RESET))
        {
	    	uart->_handle.ErrorCode |= HAL_UART_ERROR_FE;
	    }

	    /* UART Over-Run interrupt occurred --------------------------------------*/
	    if (((isrflags & USART_SR_ORE) != RESET) && (((cr1its & USART_CR1_RXNEIE) != RESET) || ((cr3its & USART_CR3_EIE) != RESET)))
	    {
	    	uart->_handle.ErrorCode |= HAL_UART_ERROR_ORE;
	    }

        /* Call UART Error Call back function if need be --------------------------*/
        if (uart->_ErrorCode != UART_ERROR_NONE) {
            /* UART in mode Receiver ---------------------------------------------------*/
        	if (((isrflags & USART_SR_RXNE) != RESET) && ((cr1its & USART_CR1_RXNEIE) != RESET))
        	{
                UART_IncomingDataInterrupt(uart);
            }

            /* If Overrun error occurs, or if any error occurs in DMA mode reception,
               consider error as blocking */
            dmarequest = HAL_IS_BIT_SET(uart->_handle.Instance->CR3, USART_CR3_DMAR);
            if (((uart->_handle.ErrorCode & HAL_UART_ERROR_ORE) != RESET) || dmarequest)
            {
                /* Blocking error : transfer is aborted
                Set the UART state ready to be able to start again the process,
                Disable Rx Interrupts, and disable Rx DMA request, if ongoing */
                // UART_EndRxTransfer(huart);

                /* Disable the UART DMA Rx request if enabled */
                if (HAL_IS_BIT_SET(uart->_handle.Instance->CR3, USART_CR3_DMAR)) {
                    CLEAR_BIT(uart->_handle.Instance->CR3, USART_CR3_DMAR);

                    /* Abort the UART DMA Rx channel */
                    // ToDo: Implement DMA abort (if DMA ends up being used)
                    // No, we should never come here since UART Error Interrupts are currently not enabled during DMA
                } else {
                    /* Call user error callback */
                    // HAL_UART_ErrorCallback(huart);
                }
            } else {
                /* Non Blocking error : transfer could go on.
                Error is notified to user through user error callback */
                // HAL_UART_ErrorCallback(huart);
                uart->_ErrorCode = UART_ERROR_NONE;
            }
        }
        return;
    } /* End if some error occurs */

    /* UART in mode Transmitter ------------------------------------------------*/
    if (((isrflags & USART_SR_TXE) != RESET) && ((cr1its & USART_CR1_TXEIE) != RESET)) {
    	__HAL_UART_CLEAR_FLAG(&uart->_handle, UART_FLAG_TXE);
        if (uart->_txRemainingBytes > 0) { // interrupt based transmission
            if (uart->_txRemainingBytes == 1) {
                /* Disable TXE interrupt */
                __HAL_UART_DISABLE_IT(&uart->_handle, UART_IT_TXE);

                /* Enable TC interrupt */
                __HAL_UART_ENABLE_IT(&uart->_handle, UART_IT_TC);
            }

            // Transmit the next byte from the buffer
            uart->_handle.Instance->DR = *uart->_txPointer++;
            uart->_txRemainingBytes--;
        } else { // polling based transmission
            /* Disable the Transmit Data Register Empty interrupt */
            __HAL_UART_DISABLE_IT(&uart->_handle, UART_IT_TXE);

#ifdef USE_FREERTOS
            portBASE_TYPE xHigherPriorityTaskWoken = pdFALSE;
            xSemaphoreGiveFromISR(uart->_transmitFinished, &xHigherPriorityTaskWoken);
            portYIELD_FROM_ISR(xHigherPriorityTaskWoken);
#else
            uart->_transmitFinished = true;
#endif
        }
        return;
    }

    /* UART in mode Transmitter (transmission end) -----------------------------*/
    if (((isrflags & USART_SR_TC) != RESET) && ((cr1its & USART_CR1_TCIE) != RESET)) {
    	__HAL_UART_CLEAR_FLAG(&uart->_handle, UART_FLAG_TC);
        __HAL_UART_DISABLE_IT(&uart->_handle, UART_IT_TC);

#ifdef USE_FREERTOS
        portBASE_TYPE xHigherPriorityTaskWoken = pdFALSE;
        xSemaphoreGiveFromISR(uart->_transmitFinished, &xHigherPriorityTaskWoken);
        portYIELD_FROM_ISR(xHigherPriorityTaskWoken);
#else
        uart->_transmitFinished = true;
#endif
        return;
    }

    /* Check for IDLE line interrupt */
    if (((isrflags & USART_SR_IDLE) != 0U) && ((cr1its & USART_CR1_IDLEIE) != 0U)) {
    	//__HAL_UART_CLEAR_FLAG(&uart->_handle, UART_FLAG_IDLE);
    	// Has to use clear macro (see https://community.st.com/s/question/0D50X00009XkXxk/stm32f205-usart-idle-interrupt-fires-for-no-reason)
    	__HAL_UART_CLEAR_IDLEFLAG(&uart->_handle);
        // ToDo: If DMA is enabled, then check for new data here
        if (uart->DMA_Enabled) {
            UART::DMA_RX_Check(uart);
        }
        if (uart->_rxAvailableOnIdle) {
#ifdef USE_FREERTOS
            portBASE_TYPE xHigherPriorityTaskWoken = pdFALSE;

            if (uart->Available()) {
                if (uart->_RXcallback && uart->_callbackTaskHandle) {
                    portBASE_TYPE xHigherPriorityTaskWoken = xTaskResumeFromISR(uart->_callbackTaskHandle);
                    portYIELD_FROM_ISR(xHigherPriorityTaskWoken);
                }

                if (uart->_RXdataAvailable)
                    xSemaphoreGiveFromISR(uart->_RXdataAvailable, &xHigherPriorityTaskWoken);
            }
            portYIELD_FROM_ISR(xHigherPriorityTaskWoken);
#else
            if (uart->_RXcallback) {
                if (!uart->_bufferLength) { // buffer not enabled - use raw byte reading
                    uart->_RXcallback(uart->_RXcallbackParameter, &uart->rxByte, 1);
                }
            }
#endif
        }
        return;
    }
}
